# RUST-API

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: error.rs  main.rs
src/config/: mod.rs
src/models/: bookings.rs  guests.rs  hotels.rs  mod.rs  prelude.rs  rooms.rs  sea_orm_active_enums.rs
src/routes/: hotels.rs
src/routes/v1/: bookings.rs  guests.rs  hotels.rs  mod.rs  rooms.rs
src/schemas/: booking.rs  guests.rs  hotels.rs  mod.rs  rooms.rs
src/services/: bookings.rs  guards.rs  guests.rs  hotels.rs  mod.rs  rooms.rs  traits.rs
